Cargando proyecto en repositorio remoto_v2

--- a/style.css
+++ b/style.css
@@ -37,397 +37,10 @@ body {
     color: var(--grayish-blue-text);
     background-color: var(--very-pale-blue-main-background);
     overflow-x: hidden;
+    padding-top: .2rem;
+    padding-right: .2rem;
 }
 
-/* CONTAINER AREA STYLES */
-.container {
-    width: 100%;
-    height: 100%;
-    padding: 1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url(images/bg-pattern.svg);
-    background-repeat: no-repeat;
-    background-position: top center;
-    background-size: 100vw 56.1vh;
-}
-
-.content {
-    width: 100%;
-    max-width: 542px;
-    height: fit-content;
-    margin-bottom: 4.4rem;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.info_heading {
-    width: 100%;
-    height: 146px;
-    margin-bottom: 3.3rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background-image: url(images/pattern-circles.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    transition: all .3s ease-in-out;
-}
-
-.info_heading_title {
-    margin-bottom: .6rem;
-    font-size: 1.755rem;
-    color: var(--dark-desaturated-blue-text-CTA-background);
-    transition: all .3s ease-in-out;
-}
-
-.info_heading_subtitle {
-    font-size: .95rem;
-    font-weight: 400;
-    letter-spacing: .012rem;
-    transition: all .3s ease-in-out;
-}
-
-.card {
-    width: 100%;
-    max-width: 540px;
-    height: 398px;
-    margin-left: 1px;
-    padding: 2.55rem 3rem 2.55rem 3rem;
-    position: relative;
-    border-radius: .6rem;
-    background-color: white;
-    box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0.05);
-    transition: all .3s ease-in-out;
-}
-
-.card_heading {
-    width: 100%;
-    margin-bottom: 1.9rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.card_heading_pageviews {
-    margin-left: -.18rem;
-    font-size: .85rem;
-    letter-spacing: .16rem;
-    font-weight: 600;
-}
-
-.card_heading_price_container {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.card_heading_price {
-    font-size: 2.5rem;
-    letter-spacing: -.05rem;
-    color: var(--dark-desaturated-blue-text-CTA-background);
-}
-
-.card_heading_period {
-    margin-left: .5rem;
-    letter-spacing: .025rem;
-}
-
-/* RANGE BAR AREA STYLE */
-.slidecontainer {
-    width: 100%;
-}
-
-.slider {
-    -webkit-appearance: none;
-    width: 100%;
-    height: .5rem;
-    border-radius: 5px;
-    background: var(--light-grayish-blue-empty-slider-bar);
-    outline: none;
-}
-
-.slider::-moz-range-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 40px;
-    height: 40px;
-    border: 0;
-    cursor: pointer;
-    border-radius: 50%;
-    background-color: var(--strong-cyan-slider-backround);
-    background-image: url('images/icon-slider.svg');
-    background-repeat: no-repeat;
-    background-position: center;
-    box-shadow: 0 1rem 2rem #51ffee;
-    transition: all .25s ease-in-out;
-}
-
-.slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 40px;
-    height: 40px;
-    border: 0;
-    cursor: pointer;
-    border-radius: 50%;
-    background-color: var(--strong-cyan-slider-backround);
-    background-image: url('images/icon-slider.svg');
-    background-repeat: no-repeat;
-    background-position: center;
-    box-shadow: 0 1rem 2rem #51ffee;
-    transition: all .25s ease-in-out;
-}
-
-.slider::-moz-range-thumb:hover {
-    background-color: #87ede3;
-}
-
-.slider::-webkit-slider-thumb:hover {
-    background-color: #87ede3;
-}
-
-.slider:hover {
-    cursor: grabbing;
-}
-
-.slider::-webkit-slider-thumb:active {
-    cursor: grabbing;
-}
-
-input[type="range"]::-moz-range-progress {
-    height: .5rem;
-    border-radius: 5px;
-    background-color: var(--soft-cyan-full-slider-bar);
-    cursor: grabbing;
-}
-
-
-/* SWITCH AERA STYLES */
-.period_switch {
-    margin-top: 3.05rem;
-    margin-bottom: 2.6rem;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-
-.period_switch_text {
-    font-size: .75rem;
-    letter-spacing: .02rem;
-}
-
-.period_switch_text_discount {
-    position: relative;
-    top: 1px;
-    margin: 0 1.1rem 0 .55rem;
-    padding: .15rem .4rem;
-    font-size: .6rem;
-    letter-spacing: .03rem;
-    border-radius: .6rem;
-    color: var(--Light-red-discount-text);
-    background-color: var(--light-grayish-red-discount-background);
-}
-
-.period_switch_text_discount_mobile {
-    display: none;
-}
-
-.switch {
-    width: 43px;
-    height: 22px;
-    margin: 0 1rem;
-    position: relative;
-    top: 2px;
-    display: inline-block;
-    transition: all .25s ease-in-out;
-}
-
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-
-.sliderswitch {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: var(--light-grayish-blue-toggle-background);
-    transition: all .25s ease-in-out;
-}
-
-.sliderswitch:hover {
-    opacity: .6;
-    background-color: var(--strong-cyan-slider-backround);
-}
-
-.sliderswitch:before {
-    position: absolute;
-    content: "";
-    height: 14px;
-    width: 14px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    transition: all .3s ease-in-out;
-}
-
-input:checked+.sliderswitch:before {
-    transform: translateX(20px);
-}
-
-.sliderswitch.round {
-    border-radius: 22px;
-}
-
-.sliderswitch.round:before {
-    border-radius: 50%;
-}
-
-.card_divider {
-    width: 100%;
-    position: absolute;
-    left: 0;
-    border: none;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.06);
-}
-
-/* FOOTER AREA STYLES */
-.footer {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.features {
-    margin-left: -.05rem;
-    margin-top: 2.05rem;
-}
-
-.features_item {
-    margin-bottom: .65rem;
-    font-size: .74rem;
-    letter-spacing: .02rem;
-}
-
-.features_item_icon {
-    margin-right: .95rem;
-}
-
-.footer_button {
-    width: 170px;
-    height: 41px;
-    margin-top: 1.45rem;
-    margin-right: -.25rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    border-radius: 41px;
-    font-size: .75rem;
-    font-weight: 600;
-    letter-spacing: .01rem;
-    color: var(--pale-blue-CTA-text);
-    background-color: var(--dark-desaturated-blue-text-CTA-background);
-    transition: all .2s ease-in-out;
-}
-
-.footer_button:hover {
-    color: var(--white-pricing-component-background);
-}
-
-@media screen and (max-width: 926px) {
-    
-    body {
-        min-height: 860px;
-    }
-
-    .container {
-        background-size: 100vw 56.1%;
-    }
-
-}
-
-@media screen and (max-width: 480px) {
-
-    .info_heading {
-        height: 165px;
-        background-size: contain;
-    }
-    
-    .info_heading_title {
-        font-size: 1.4rem;
-    }
-
-    .info_heading_subtitle {
-        max-width: 200px;
-        font-size: .95rem;
-        line-height: 1.65rem;
-    }
-
-    .card {
-        height: auto;
-        padding: 2rem 1.3rem 2rem 1.3rem;
-        position: relative;
-    }
-
-    .card_heading {
-        height: 165px;
-        flex-direction: column;
-        justify-content: space-between;
-        position: absolute;
-        left: 0;
-    }
-
-    .card_heading_pageviews {
-        margin: 0;
-    }
-
-    .slidecontainer {
-        margin-top: 3.5rem;
-        position: relative;
-        z-index: 10;
-    }
-
-    .period_switch {
-        margin-top: 7.5rem;
-        justify-content: center;
-    }
-
-    .switch {
-        margin: 0 .3rem;
-    }
-
-    .period_switch_text {
-        font-size: .71rem;
-    }
-
-    .period_switch_text_discount {
-        display: none;
-    }
-
-    .period_switch_text_discount_mobile {
-        display: flex;
-        margin: 0 0 0 .2rem;
-        padding: .15rem .4rem;
-        font-size: .6rem;
-        letter-spacing: .03rem;
-        border-radius: .6rem;
-        color: var(--Light-red-discount-text);
-        background-color: var(--light-grayish-red-discount-background);
-    }
-
-    .footer {
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-      }
+img {
+    transform: scale(1.125);
 }
