--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ body {
 }
 
 .slider {
-    -webkit-appearance: none;
+    appearance: none;
     width: 100%;
     height: .5rem;
     border-radius: 5px;
